--- a/app/components/Sponsor.module.css
+++ b/app/components/Sponsor.module.css
@@ -5,10 +5,6 @@
   align-items: center;
   padding: 1.5rem;
   background-image: linear-gradient(white, #e0e0e0);
-  /* background-image: url('../../public/4.png'); */
-  /* background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center; */
 }
 
 .containerSponsors > p {
@@ -19,50 +15,10 @@
 .promoters {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
   gap: 10svw;
   flex-wrap: wrap;
-}
-
-.abramede {
-  aspect-ratio: auto 401 / 145;
-  width: 120px !important;
-}
-.srmg {
-  aspect-ratio: auto 641 / 182;
-  width: 120px !important;
-  height: auto;
-}
-.bayerClass, .braccoClass {
-  width: 40px !important;
-  height: auto;
-}
-.dasaClass , .canonClass {
-  width: 50px !important;
-  height: auto;
-}
-.saoMarcosClass {
-  width: 70px !important;
-  height: auto;
-}
-.mhedicaClass {
-  width: 80px !important;
-  height: auto;
-}
-.fleuryClass, .supriMedicalClass {
-  width: 100px !important;
-  height: auto;
-}
-.ceuClass, .agisClass, .gphantomClass, .crmmgClass {
-  width: 60px !important;
-  height: auto;
-}
-
-.joinClass {
-  width: 45px !important;
-  height: auto;
-  border-radius: 50%;
 }
 
 .sponsors {
@@ -111,8 +67,6 @@
   gap: 1.5rem;
 }
 .imgSponsors {
-  width: 80px;
-  height: auto;
   transition: filter 0.5s ease-in-out; /* Transição de opacidade */
   object-fit: fill;
 }
@@ -123,7 +77,7 @@
 }
 
 @media (min-width: 1024px) {
-  .gold, .silver {
+  .gold, .silver, .bronze {
     min-height: 98px;
   }
 }
