--- a/app/components/AvatarCard.module.css
+++ b/app/components/AvatarCard.module.css
@@ -11,6 +11,7 @@
   text-align: center;
   border: 0px;
   transition: transform 0.5s ease-in-out;
+  z-index: 2;
 
   &>div:nth-child(1) {
     overflow: hidden;
