--- a/app/globals.css
+++ b/app/globals.css
@@ -93,6 +93,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body, #__next {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
