--- a/app/components/RegistrationForm/Steps/ProductSelectionStep.module.css
+++ b/app/components/RegistrationForm/Steps/ProductSelectionStep.module.css
@@ -5,8 +5,8 @@
 
 .title {
   font-size: 1.15rem;
-  color: #333;
-  margin-block-end: 0.5rem;
+  color: var(--facebook-clr);
+  margin-block-end: 2.5rem;
   text-align: center;
 }
 
@@ -21,30 +21,56 @@
 }
 
 .productSection {
-  margin-block-end: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  max-width: 250px;
+  margin-block-end: 2rem;
 }
 
 .sectionTitle {
   font-size: 1.25rem;
-  color: #333;
-  margin-block-end: 05rem;
-  padding-block-end: 0.5rem;
-  border-block-end: 2px solid #e9ecef;
+  color: var(--success-clr);
+  padding-block-end: 0.25rem;
+  /* border-block-end: 2px solid #e9ecef; */
 }
 
 .productGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  justify-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   gap: 1.5rem;
+  min-height: 100px;
+}
+
+.productsWrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(155px, 1fr));
+  grid-auto-rows: 1fr 1fr;
+  grid-gap: 1rem;
+  gap: 1rem;
+  margin-block: 1rem;
+  justify-items: center;
 }
 
 .productCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  max-width: 200px;
   background: #fff;
   border: 2px solid #e9ecef;
   border-radius: 8px;
-  padding: 1.5rem;
+  padding: 0.25rem;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  width: 100%;
+  & h4 {
+    text-wrap: balance;
+    font-size: 0.875rem;
+    color: #333;
+    margin-block-end: 0.5rem;
+  }
 }
 
 .productCard:hover {
@@ -58,15 +84,9 @@
   background-color: #f8f9ff;
 }
 
-.productCard h4 {
-  font-size: 1.1rem;
-  color: #333;
-  margin-block-end: 0.5rem;
-}
-
 .description {
   color: #666;
-  font-size: 0.9rem;
+  font-size: 0.65rem;
   margin-block-end: 1rem;
   line-height: 1.4;
 }
