--- a/app/components/RegistrationForm/Steps/CategorySelectionStep.module.css
+++ b/app/components/RegistrationForm/Steps/CategorySelectionStep.module.css
@@ -36,14 +36,14 @@
   border-radius: 8px;
   padding: 0.5rem;
   cursor: pointer;
-  transition: all 0.2s ease-in-out;
   position: relative;
+  transition: all 0.2s ease-in-out;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   height: 100%; /* Fill the grid cell */
 }
 
 .categoryCard:hover {
-  border-color: var(--success-color);
+  border-color: var(--success-color) !important;
   transform: translateY(-2px);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -51,6 +51,7 @@
 .categoryCard.selected {
   border-color: #007bff;
   background-color: #f8f9ff;
+  /* border-style: dashed; */
 }
 
 .imageContainer {
