--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,7 @@
   --danger-clr: #dc3545;
   --success-clr: #198754;
   --warning-clr: #ffc107;
+  --warning-rgb: rgb(255, 193, 7);
   --info-clr: #0dcaf0;
   --disabled-clr: #6c757d;
   --light-clr: #f8f9fa;
