--- a/app/components/RegistrationForm/Steps/CategorySelectionStep.module.css
+++ b/app/components/RegistrationForm/Steps/CategorySelectionStep.module.css
@@ -167,6 +167,14 @@
   background-color: #5a6268;
 }
 
+.buttonWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 7rem;
+  margin-inline-end: -0.5rem;
+}
+
 .nextButton {
   background-color: #007bff;
   color: white;
