--- a/app/globals.css
+++ b/app/globals.css
@@ -140,8 +140,13 @@
 
 html,
 body {
-  max-width: 100vw;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 html {
