--- a/app/components/Promoters.module.css
+++ b/app/components/Promoters.module.css
@@ -11,6 +11,13 @@
   padding-block: 2rem;
 }
 
+.logoContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 .brands {
   height: 80px;
   width: auto;
