--- a/app/components/Sponsor.module.css
+++ b/app/components/Sponsor.module.css
@@ -67,6 +67,13 @@
   gap: 1.5rem;
 }
 
+.logoContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
 .imgSponsors {
   object-fit: fill;
 }
