--- a/app/components/Banner.module.css
+++ b/app/components/Banner.module.css
@@ -1,4 +1,7 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   background-color: var(--background);
   padding: 0 1.5rem;
 }
@@ -12,7 +15,7 @@
   font-size: 1.7em;
   font-weight: 900;
   border: 1px solid var(--foreground);
-  margin: 3rem auto;
+  margin: 3rem auto 2rem;
   width: max-content;
   background-color: var(--secondary-text-clr);
   color: var(--foreground);
